--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @font-face {
     font-family: F16;
-    src: url("p5hatty.ttf") format('truetype');
+    src: url("../98otiss03/p5hatty.ttf") format('truetype');
+    font-weight: bold;
     font-style: normal;
 }
