--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: F16;
-    src: url("../98otiss03/p5hatty.ttf") format('truetype');
+    src: url("../98otiss03.github.io/p5hatty.ttf") format('truetype');
     font-weight: bold;
     font-style: normal;
 }
