--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: F16;
+    font-family: Times New Roman;
     src: url("../98otiss03.github.io/p5hatty.ttf") format('truetype');
     font-weight: bold;
     font-style: normal;
